[package]
name = "csp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = '1.4.3'
chrono = '0.4.22'
crossbeam = '0.8.2'
csv = '1.1.6'
ctrlc = '3.2.3'
etherparse = '0.13.0'
lockfile = '0.4.0'
named-lock = '0.3.0'
num-complex = '0.4.2'
num-traits = '0.2.15'
packed_struct = '0.10.0'
pcap = '1.1.0'
plotters = '0.3.4'
rayon = '1.5.3'
rocket = '0.5.0'
serde_json = '1.0.85'
serde_yaml = '0.9.13'
sysinfo = '0.30.5'
lockfree-object-pool = "0.1.3"
binrw = "0.13.3"
regex = "1.7.1"
ndarray={version='0.15.6', features=["rayon"]}
ndarray-npy='0.8.1'
suppaftp = "5.1.1"


[dependencies.clap]
features = ['derive']
version = '4.0.9'

[dependencies.pnet]
features = ['pcap']
version = '0.34.0'

[dependencies.serde]
features = ['derive']
version = '1.0.144'

[build-dependencies]
bindgen = '0.69.2'
