[build-dependencies]
bindgen = '0.70.1'

[dependencies]
binrw = '0.14.0'
byteorder = '1.4.3'
chrono = '0.4.22'
core_affinity = '0.8.1'
crossbeam = '0.8.2'
csv = '1.1.6'
ctrlc = '3.2.3'
futures = '0.3.30'
lockfile = '0.4.0'
lockfree-object-pool = '0.1.3'
ndarray-npy = '0.8.1'
num-complex = '0.4.2'
num-traits = '0.2.15'
packed_struct = '0.10.0'
rayon = '1.5.3'
regex = '1.7.1'
rocket = '0.5.0'
serde_json = '1.0.85'
serde_yaml = '0.9.13'
socket2 = '0.5.5'
suppaftp = '5.3.0'


[dependencies.clap]
features = ['derive']
version = '4.0.9'

[dependencies.ndarray]
features = ['rayon']
version = '0.16.1'

[dependencies.pnet]
features = ['pcap']
version = '0.34.0'

[dependencies.serde]
features = ['derive']
version = '1.0.144'

[dependencies.tokio]
features = ['full']
version = '1.35.1'

[package]
edition = '2021'
name = 'csp'
version = '0.1.0'
